samples/_failures_safe/1761429628_046718_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e053f3e4.c: In function ‘main’:
./samples/SAFE/__tmp_e053f3e4.c:139:5: error: expected declaration or statement at end of input
  139 |     }
      |     ^
